fixed resizing too big issue

--- a/packages/local/ext-theme-gray-6ed0c18f-e314-478f-8827-accf070a4a75/sass/src/Component.scss
+++ b/packages/local/ext-theme-gray-6ed0c18f-e314-478f-8827-accf070a4a75/sass/src/Component.scss
@@ -98,8 +98,12 @@
         height: auto;
     }
 
-    .details .x-autocontainer-form-item {
-        margin-bottom: 0;
+    .details {
+         margin: 10px;
+        
+        .x-autocontainer-form-item {
+            margin-bottom: 0;
+        }
     }
 }
 /*
