--- a/resources/.arch-internal-preview.css
+++ b/resources/.arch-internal-preview.css
@@ -24894,8 +24894,10 @@ a.x-color-picker-item:hover {
   max-width: 600px;
   width: 100%;
   height: auto; }
-.full-size-photo .details .x-autocontainer-form-item {
-  margin-bottom: 0; }
+.full-size-photo .details {
+  margin: 10px; }
+  .full-size-photo .details .x-autocontainer-form-item {
+    margin-bottom: 0; }
 
 /*
  * Stewarts CSS Library
